--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "beautifulsoup4>=4.12.3",
     "pandas>=2.2.3",
     "requests>=2.32.3",
+    "ruff>=0.8.6",
     "tqdm>=4.67.1",
 ]
